manifests/kiali/ingress/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - kiali.dev.innovatshub.com
  gateways:
    - istio-system/innovatshub-dev
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
